remove unused AssetMetadata response field
